--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,15 @@ chrono = "0.4.19"
 dotenvy = "0.15"
 
 [dependencies.dash-spv-primitives]
-git = "https://github.com/pankcuf/dash-spv-primitives"
-branch = "master"
-version = "0.1.9"
+path = "../dash-spv-primitives"
+#git = "https://github.com/pankcuf/dash-spv-primitives"
+#branch = "master"
+#version = "0.1.9"
 [dependencies.dash-spv-models]
-git = "https://github.com/pankcuf/dash-spv-models"
-branch = "master"
-version = "0.1.5"
+path = "../dash-spv-models"
+#git = "https://github.com/pankcuf/dash-spv-models"
+#branch = "master"
+#version = "0.1.5"
 
 [lib]
 name = "dash_spv_storage"
